# manim_mcp_server

./: README.md  main.py  pyproject.toml
src/manim_mcp_server/: config.py  models.py  server.py
